# gst-opencv

./: .gitignore  configure.ac
src/: Makefile.am  gstopencv.c
src/bgfgacmmm2003/: Makefile.am  gstbgfgacmmm2003.c  gstbgfgacmmm2003.h
src/bgfgcodebook/: Makefile.am  gstbgfgcodebook.c  gstbgfgcodebook.h
src/common/: Makefile.am  condensation.c  condensation.h  draw.c  draw.h  identifier_motion.c  identifier_motion.h  surf.c  surf.h  tracked-object.c  tracked-object.h  util.c  util.h
src/facedetect/: gstfacedetect.c  gstfacedetect.h
src/facemetrix/: Makefile.am  draw.c  draw.h  gstfacemetrix.c  gstfacemetrix.h  identifier_motion.c  identifier_motion.h  kmeans.c  kmeans.h  sglclient.c  sglclient.h
src/haaradjust/: Makefile.am  gsthaaradjust.c  gsthaaradjust.h
src/haardetect/: Makefile.am  gsthaardetect.c  gsthaardetect.h
src/hogdetect/: Makefile.am  gsthogdetect.c  gsthogdetect.h
src/homography/: Makefile.am  gsthomography.c  gsthomography.h
src/interpreterinteraction/: Makefile.am  gstinterpreterinteraction.c  gstinterpreterinteraction.h
src/lkopticalflow/: Makefile.am  gstlkopticalflow.c  gstlkopticalflow.h
src/motiontemplate/: Makefile.am  gstmotiontemplate.c  gstmotiontemplate.h
src/objectdistances/: Makefile.am  gstobjectdistances.c  gstobjectdistances.h
src/objectsareainteraction/: Makefile.am  contour.c  contour.h  gstobjectsareainteraction.c  gstobjectsareainteraction.h
src/objectsinteraction/: Makefile.am  gstobjectsinteraction.c  gstobjectsinteraction.h
src/objectstracker/: Makefile.am  gstobjectstracker.c  gstobjectstracker.h
src/onlineboost/: BaseClassifier.cpp  BaseClassifier.h  Classifier.cpp  Classifier.h  ClassifierIntermediate.cpp  ClassifierThreshold.h  Detector.cpp  Detector.h  EstimatedGaussDistribution.h  FeatureHaar.h  ImageRepresentation.cpp  ImageRepresentation.h  Makefile.am  OS_specific.h  Patches.cpp  Patches.h  Regions.h  StrongClassifier.h  StrongClassifierDirectSelection.cpp  StrongClassifierDirectSelection.h  StrongClassifierStandard.h  StrongClassifierStandardSemi.cpp  StrongClassifierStandardSemi.h  WeakClassifier.h  WeakClassifierHaarFeature.h
src/onlineboost/imageio/: ImageHandler.cpp  ImageHandler.h  ImageSource.h  ImageSourceAVIFile.cpp  ImageSourceDir.cpp  ImageSourceUSBCam.cpp  ImageSourceUSBCam.h  Makefile.am
src/onlineboost/trackers/: BeyondSemiBoostingApplication.cpp  BeyondSemiBoostingTracker.cpp  BeyondSemiBoostingTracker.h  BoostingApplication.cpp  BoostingTracker.cpp  BoostingTracker.h  ClassifierApplication.cpp  Makefile.am  SemiBoostingApplication.cpp  SemiBoostingTracker.cpp  SemiBoostingTracker.h
src/optflowtracker/: Makefile.am  gstoptflowtracker.c  gstoptflowtracker.h
src/staticobjects/: Makefile.am  gststaticobjects.c  gststaticobjects.h
src/surftracker/: Makefile.am  gstsurftracker.c  gstsurftracker.h
src/tracker/: Makefile.am  condensation.c  condensation.h  gsttracker.c  gsttracker.h  identifier.c  identifier.h  tracker.c  tracker.h
